--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120256144-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-120256144-1');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+        .box {
+            display: block;
+            text-align: center;
+        }
+
+        .item {
+            display: inline-block;
+            background-color: green;
+        }
+    </style>
     <title>First Homepage</title>
 </head>
+
 <body>
     Hello, My First Homepage.
+    <div class="box">
+        <div class="item">Hello world</div>
+    </div>
+
+
+
+
+
 </body>
+
 </html>
